--- a/goraceloty-front-end/nginx.conf
+++ b/goraceloty-front-end/nginx.conf
@@ -41,7 +41,7 @@ server {
 
   location /api/ {
     rewrite ^/api(/.*)$ $1 break;
-    proxy_pass http://service-hotel:8080;
+    proxy_pass http://localhost:8080;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection $connection_upgrade;
