--- a/service-hotel/src/main/resources/application.properties
+++ b/service-hotel/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=hotel-service
 
-spring.datasource.url=jdbc:postgresql://db_postgres:5432/svc_hotel
+spring.datasource.url=jdbc:postgresql://localhost:5432/svc_hotel
 spring.datasource.username=gl_pg_user
 spring.datasource.password=g0r4c3_l0ty
 
