--- a/service-hotel/src/main/resources/application.properties
+++ b/service-hotel/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=hotel-service
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/svc_hotel
+spring.datasource.url=jdbc:postgresql://db_postgres:5432/svc_hotel
 spring.datasource.username=gl_pg_user
 spring.datasource.password=g0r4c3_l0ty
 
@@ -8,7 +8,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
