--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,19 @@ services:
     networks:
       - goraceloty_net
 
+    service-offer:
+    build: ./service-flight
+    depends_on:
+      - db_postgres
+    environment:
+      - DATASOURCE_URL=db_postgres:5432/svc_offer
+      - DATASOURCE_USERNAME=gl_pg_user
+      - DATASOURCE_PASSWORD=g0r4c3_l0ty
+    ports:
+      - "8081:8080"
+    networks:
+      - goraceloty_net
+
   service-offer:
     build: ./service-offer
     depends_on:
