--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,8 @@ services:
       - "8080:8080"
     networks:
       - goraceloty_net
-
-  service-offer:
+      
+   service-offer:
     build: ./service-offer
     depends_on:
       - db_postgres
@@ -35,13 +35,26 @@ services:
       - "8081:8080"
     networks:
       - goraceloty_net
+    
+  service-flight:
+    build: ./service-flight
+    depends_on:
+      - db_postgres
+    environment:
+      - DATASOURCE_URL=db_postgres:5432/svc_flight
+      - DATASOURCE_USERNAME=gl_pg_user
+      - DATASOURCE_PASSWORD=g0r4c3_l0ty
+    ports:
+      - "8082:8080"
+    networks:
+      - goraceloty_net
 
   db_postgres:
     image: postgres:14
     volumes:
       - ./pg-init:/docker-entrypoint-initdb.d
     environment:
-      POSTGRES_MULTIPLE_DATABASES: svc_offer, svc_hotel, svc_travel
+      POSTGRES_MULTIPLE_DATABASES: svc_offer, svc_hotel, svc_travel,svc_flight
       POSTGRES_USER: gl_pg_user
       POSTGRES_PASSWORD: g0r4c3_l0ty
     ports:
