--- a/service-travel_agency/src/main/resources/application.properties
+++ b/service-travel_agency/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.application.name=flight-service
+spring.application.name=travelAgency-service
 
-spring.datasource.url=jdbc:postgresql://db_postgres:5432/svc_flight
+spring.datasource.url=jdbc:postgresql://db_postgres:5432/svc_travel_agency
 spring.datasource.username=gl_pg_user
 spring.datasource.password=g0r4c3_l0ty
 
