--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,13 +22,52 @@ services:
       - "8080:8080"
     networks:
       - goraceloty_net
+    
+  service-offer:
+    build: ./service-offer
+    depends_on:
+      - db_postgres
+    environment:
+      - DATASOURCE_URL=db_postgres:5432/svc_offer
+      - DATASOURCE_USERNAME=gl_pg_user
+      - DATASOURCE_PASSWORD=g0r4c3_l0ty
+    ports:
+      - "8081:8080"
+    networks:
+      - goraceloty_net
+    
+  service-flight:
+    build: ./service-flight
+    depends_on:
+      - db_postgres
+    environment:
+      - DATASOURCE_URL=db_postgres:5432/svc_flight
+      - DATASOURCE_USERNAME=gl_pg_user
+      - DATASOURCE_PASSWORD=g0r4c3_l0ty
+    ports:
+      - "8082:8080"
+    networks:
+      - goraceloty_net
+
+  service-travel-agency:
+    build: ./service-travel_agency
+    depends_on:
+      - db_postgres
+    environment:
+      - DATASOURCE_URL=db_postgres:5432/svc_travel_agency
+      - DATASOURCE_USERNAME=gl_pg_user
+      - DATASOURCE_PASSWORD=g0r4c3_l0ty
+    ports:
+      - "8083:8080"
+    networks:
+      - goraceloty_net  
 
   db_postgres:
     image: postgres:14
     volumes:
       - ./pg-init:/docker-entrypoint-initdb.d
     environment:
-      POSTGRES_MULTIPLE_DATABASES: svc_hotel, svc_travel, svc_flight
+      POSTGRES_MULTIPLE_DATABASES: svc_travel_agency, svc_offer,svc_hotel, svc_travel, svc_flight
       POSTGRES_USER: gl_pg_user
       POSTGRES_PASSWORD: g0r4c3_l0ty
     ports:
