--- a/service-offer/pom.xml
+++ b/service-offer/pom.xml
@@ -58,6 +58,11 @@
 			<artifactId>spring-rabbit</artifactId>
 			<version>3.1.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20090211</version>
+		</dependency>
 	</dependencies>
 
 	<build>
