--- a/OfferSagaOrchestrator/src/main/resources/application.properties
+++ b/OfferSagaOrchestrator/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=OfferSagaOrchestrator
-server.port=8083
+server.port=8084
 
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
