--- a/service-travel_agency/pom.xml
+++ b/service-travel_agency/pom.xml
@@ -58,6 +58,16 @@
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.amqp</groupId>
+			<artifactId>spring-amqp</artifactId>
+			<version>3.1.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.amqp</groupId>
+			<artifactId>spring-rabbit</artifactId>
+			<version>3.1.4</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
