--- a/service-hotel/src/main/resources/application.properties
+++ b/service-hotel/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=hotel-service_2
+server.port=8080
 
 spring.datasource.url=jdbc:postgresql://db_postgres:5432/svc_hotel
 spring.datasource.username=gl_pg_user
