--- a/service-offer/src/main/resources/application.properties
+++ b/service-offer/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=offer-service
+server.port=8081
 
 spring.datasource.url=jdbc:postgresql://db_postgres:5432/svc_offer
 spring.datasource.username=gl_pg_user
 spring.datasource.password=g0r4c3_l0ty
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 
