--- a/service-travel_agency/src/main/resources/application.properties
+++ b/service-travel_agency/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=travelAgency-service
+server.port=8083
 
 spring.datasource.url=jdbc:postgresql://db_postgres:5432/svc_travel_agency
 spring.datasource.username=gl_pg_user
