--- a/OfferSagaOrchestrator/Dockerfile
+++ b/OfferSagaOrchestrator/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:21-jdk
 
-ADD target/offer-service-0.0.1-SNAPSHOT.jar app.jar
+ADD target/OfferSagaOrchestrator-0.0.1-SNAPSHOT.jar app.jar
 
 ENTRYPOINT ["java","-jar","/app.jar"]
