--- a/service-flight/Dockerfile
+++ b/service-flight/Dockerfile
@@ -1,5 +1,4 @@
 FROM openjdk:21-jdk
-
+COPY data/transport_final_clean.json /app/data/
 ADD target/hotel-service-0.0.1-SNAPSHOT.jar app.jar
-
 ENTRYPOINT ["java","-jar","/app.jar"]
