--- a/service-hotel/pom.xml
+++ b/service-hotel/pom.xml
@@ -58,6 +58,10 @@
 			<artifactId>spring-rabbit</artifactId>
 			<version>3.1.4</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
