--- a/goraceloty-front-end/nginx.conf
+++ b/goraceloty-front-end/nginx.conf
@@ -49,8 +49,8 @@ server {
     proxy_connect_timeout 300;
     proxy_send_timeout 300;
   }
-  location /hotel/ {
-      rewrite ^/hotel(/.*)$ $1 break;
+  location /api/hotel/ {
+      rewrite ^/api/hotel(/.*)$ $1 break;
       proxy_pass http://localhost:8080;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
@@ -59,8 +59,8 @@ server {
       proxy_connect_timeout 300;
       proxy_send_timeout 300;
     }
-  location /transport/ {
-      rewrite ^/transport(/.*)$ $1 break;
+  location /api/transports/ {
+      rewrite ^/api/transports(/.*)$ $1 break;
       proxy_pass http://localhost:8082;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
@@ -68,6 +68,16 @@ server {
       proxy_read_timeout 300;
       proxy_connect_timeout 300;
       proxy_send_timeout 300;
+    }
+    location /api/booking/ {
+        rewrite ^/api/booking(/.*)$ $1 break;
+        proxy_pass http://localhost:8083;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_read_timeout 300;
+        proxy_connect_timeout 300;
+        proxy_send_timeout 300;
     }
 
   error_page 405 =200 $uri;
