--- a/goraceloty-front-end/nginx.conf
+++ b/goraceloty-front-end/nginx.conf
@@ -49,8 +49,8 @@ server {
     proxy_connect_timeout 300;
     proxy_send_timeout 300;
   }
-  location /api/hotel/ {
-      rewrite ^/api/hotel(/.*)$ $1 break;
+  location /api/hotels/ {
+      rewrite ^/api/hotels(/.*)$ $1 break;
       proxy_pass http://localhost:8080;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
@@ -69,8 +69,8 @@ server {
       proxy_connect_timeout 300;
       proxy_send_timeout 300;
     }
-    location /api/booking/ {
-        rewrite ^/api/booking(/.*)$ $1 break;
+    location /api/OfferReservation/ {
+        rewrite ^/api/OfferReservation(/.*)$ $1 break;
         proxy_pass http://localhost:8083;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
