--- a/goraceloty-front-end/tsconfig.json
+++ b/goraceloty-front-end/tsconfig.json
@@ -8,6 +8,7 @@
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": false,
     "skipLibCheck": true,
     "sourceMap": true,
     "declaration": false,
