--- a/goraceloty-front-end/nginx.conf
+++ b/goraceloty-front-end/nginx.conf
@@ -38,57 +38,16 @@ server {
     expires 0;
     try_files /index.html =404;
   }
-
-  location /api/offers/ {
-    rewrite ^/api/offers(/.*)$ $1 break;
-    proxy_pass http://localhost:8081;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection $connection_upgrade;
-    proxy_read_timeout 300;
-    proxy_connect_timeout 300;
-    proxy_send_timeout 300;
+  location /api/ {
+      rewrite ^/api(/.*)$ $1 break;
+      proxy_pass http://api-gateway:8085;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection $connection_upgrade;
+      proxy_read_timeout 300;
+      proxy_connect_timeout 300;
+      proxy_send_timeout 300;
   }
-  location /api/hotels/ {
-      rewrite ^/api/hotels(/.*)$ $1 break;
-      proxy_pass http://localhost:8080;
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection $connection_upgrade;
-      proxy_read_timeout 300;
-      proxy_connect_timeout 300;
-      proxy_send_timeout 300;
-    }
-  location /api/transports/ {
-      rewrite ^/api/transports(/.*)$ $1 break;
-      proxy_pass http://localhost:8082;
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection $connection_upgrade;
-      proxy_read_timeout 300;
-      proxy_connect_timeout 300;
-      proxy_send_timeout 300;
-    }
-    location /api/OfferReservation/ {
-        rewrite ^/api/OfferReservation(/.*)$ $1 break;
-        proxy_pass http://localhost:8083;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
-        proxy_read_timeout 300;
-        proxy_connect_timeout 300;
-        proxy_send_timeout 300;
-    }
-    location /api/gateway/ {
-        rewrite ^/api/gateway(/.*)$ $1 break;
-        proxy_pass http://localhost:8083;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
-        proxy_read_timeout 300;
-        proxy_connect_timeout 300;
-        proxy_send_timeout 300;
-    }
   error_page 405 =200 $uri;
   client_max_body_size 64M;
 }
