--- a/service-travel_agency/src/main/resources/application.properties
+++ b/service-travel_agency/src/main/resources/application.properties
@@ -1,7 +1,22 @@
+#spring.application.name=travelAgency-service
+#server.port=8083
+#
+#spring.datasource.url=jdbc:postgresql://db_postgres:5432/svc_travel_agency
+#spring.datasource.username=gl_pg_user
+#spring.datasource.password=g0r4c3_l0ty
+#
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#
+#spring.rabbitmq.host=rabbitmq
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
 spring.application.name=travelAgency-service
 server.port=8083
 
-spring.datasource.url=jdbc:postgresql://db_postgres:5432/svc_travel_agency
+spring.datasource.url=jdbc:postgresql://localhost:5432/svc_travel_agency
 spring.datasource.username=gl_pg_user
 spring.datasource.password=g0r4c3_l0ty
 
@@ -9,8 +24,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
-
