--- a/OfferSagaOrchestrator/src/main/resources/application.properties
+++ b/OfferSagaOrchestrator/src/main/resources/application.properties
@@ -1,16 +1,16 @@
-#spring.application.name=OfferSagaOrchestrator
-#server.port=8084
-#
-#spring.rabbitmq.host=rabbitmq
-#spring.rabbitmq.port=5672
-#spring.rabbitmq.username=guest
-#spring.rabbitmq.password=guest
 spring.application.name=OfferSagaOrchestrator
 server.port=8084
 
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+#spring.application.name=OfferSagaOrchestrator
+#server.port=8084
+#
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
 
 
