--- a/service-flight/src/main/resources/application.properties
+++ b/service-flight/src/main/resources/application.properties
@@ -2,18 +2,14 @@ spring.application.name=flight-service
 server.port=8082
 
 spring.datasource.url=jdbc:postgresql://db_postgres:5432/svc_flight
-#spring.datasource.url=jdbc:postgresql://localhost:5432/svc_flight
 spring.datasource.username=gl_pg_user
 spring.datasource.password=g0r4c3_l0ty
-
-
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-#spring.rabbitmq.host=rabbitmq
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
